# Gears_Vk_sample

./: CMakeLists.txt  README.md
.github/workflows/: cross-platform-check.yml
cmake/: gvk.cmake
shaders/: diffuse_shading_fixed_lightsource.frag
src/: main.cpp
